# compare-observer-cpp

./: .gitignore  CMakeLists.txt  CODE_IMPROVEMENTS.md  INSTALL_QT_MSVC_NOW.md  README.md  build.sh  build_app.cmd  build_debug_console.cmd  install_qt_msvc.cmd
build_debug/: CMakeCache.txt
resources/: CompareObserver.manifest  app.rc  icons.qrc
src/: config.cpp  config.h  main.cpp  main_window.cpp  main_window.h
src/core/: events.cpp  events.h  models.cpp  models.h
src/services/: file_watcher.cpp  file_watcher.h  telegram_service.cpp  telegram_service.h
src/ui/: styles.cpp  styles.h  ui_constants.h
src/ui/dialogs/: change_review_dialog.cpp  change_review_dialog.h  chunk_review_dialog.cpp  chunk_review_dialog.h  file_diff_dialog.cpp  file_diff_dialog.h  git_compare_dialog.cpp  git_compare_dialog.h  log_dialog.cpp  log_dialog.h  settings_dialog.cpp  settings_dialog.h
src/ui/models/: log_table_model.cpp  log_table_model.h
src/ui/widgets/: custom_text_edit.cpp  custom_text_edit.h  file_watcher_table.cpp  file_watcher_table.h
src/utils/: helpers.cpp  helpers.h
